/**
 * Copyright (C) 2014 Open Whisper Systems
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";
package textsecure;

//option java_package = "org.whispersystems.textsecuregcm.storage";
//option java_outer_classname = "PubSubProtos";

// 订阅消息
message PubSubMessage {
  enum Type {
    UNKNOWN   = 0;
    QUERY_DB  = 1;
    DELIVER   = 2;  //递送
    KEEPALIVE = 3;
    CLOSE     = 4;
    CONNECTED = 5;
  }

   Type  type    = 1;
   bytes content = 2;
}
